--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,24 @@
-name: CI
+name: Djangp-app workflows 
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push]
 
 jobs:
-  build:
-
+  tests:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
+    - name: Set up Python
+      uses: actions/setup_python@v2
+      with: 
+        python_version: 3.7
+        
+    - name: Install dependencies
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project
+        python -m pip install --upgrade pip
+        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+        pip install -r requirements.txt
+        
+    - name: Test witb flake8 and django tests
+      run: |
+        python -m flake8
