--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
     - name: Test witb flake8 and django tests
       run: |
         python -m flake8
-        cd infra-project/
+        cd infra_project/
         python manage.py test
